created ENV file with variables,, and created user model

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,37 @@
 <%- include('includes/header.ejs') %>
 <%- include('includes/navbar.ejs') %>
+
+<!-- start welcome section -->
+    <section class="bg-gray-50 py-10">
+        <div class="container mx-auto">
+            <div class="grid grid-cols-2 grid-rows-1 gap-4">
+                <div class="card bg-white px-4 py-10 shadow-md w-2/3 rounded mx-8 h-3/5 self-center">
+                    <h2 class="text-4xl font-bold text-gray-800">Searching for new Experience?</h2>
+                    <p class="my-3 text-lg text-gray-700">Here You will find Everything you are looking for.</p>
+                    <div class="search flex relative">
+                        <input type="text" placeholder="What do you want to learn?" class="border border-gray-600 w-full p-3">
+                        <button class="absolute right-4 top-4 cursor-pointer h-1/2"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                          </svg></button>
+                    </div>
+                </div>
+                <div class="img flex justify-center">
+                    <img src="https://cdn.shopify.com/s/files/1/0016/8892/8331/products/70f1cb0d1d7e4b2e959dea8dc31f8e44_1024x1024.png?v=1571834841" alt="Hurry up! its learning time." class="">
+                </div>
+            </div>
+        </div>
+    </section>
+<!-- end welcome section -->
+
+<!-- start suggsted courses -->
+<section class="py-4">
+    <div class="container mx-auto">
+        <h2 class="text-4xl font-bold">Here are some of courses</h2>
+        
+    </div>
+</section>
+<!-- end suggsted courses -->
+
+
+
 <%- include('includes/footer.ejs') %>
