--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,7 +1,7 @@
 <header class="bg-blue-400 py-3 shadow-md">
     <div class="container mx-auto">
         <div class="grid grid-cols-6 grid-rows-1 gap-4">
-            <div class="py-2 text-center font-bold text-white"><span class="cursor-pointer"><a href="/">MySite</a></span></div>
+            <div class="py-2 text-center font-bold text-white"><span class="cursor-pointer"><a href="/">FreeLearning</a></span></div>
             <div class="menu col-start-2 col-span-4">
                 <ul class="menu-ul flex justify-center">
                     <li class="py-2 px-5 text-gray-100 font-medium hover:bg-blue-100 hover:text-blue-400 cursor-pointer transition duration-600 ease-in-out rounded"><a href="/">Home</a></li>
