--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,7 +13,7 @@
             <button  class="m-auto w-1/2  p-3 my-1 border-2 border-indgo-600 shadow-sm font-bold bg-green-400 text-gray-100 hover:bg-green-500">Log In</button> 
         </form>
         <p class="text-center mt-3 mb-4">or <a class="text-blue-700 cursor-pointer">Forgot Password</a></p>
-        <h3 class="text-center">Don't have an account? <a class="text-blue-700 font-bold cursor-pointer">Sign up</a></h3>
+        <h3 class="text-center">Don't have an account? <a href="/signup" class="text-blue-700 font-bold cursor-pointer">Sign up</a></h3>
     </div>
 </section>
 <%- include('includes/footer.ejs') %>
