--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -11,7 +11,7 @@
             <button  class="m-auto w-1/2  p-3 my-1 border-2 border-indgo-600 shadow-sm font-bold bg-green-400 text-gray-100 hover:bg-green-500 transition duration-600 ease-in-out">Sign Up</button> 
         </form>
         <p class="text-center mt-3 mb-4 text-xs	">By signing up, you agree to our <a class="text-blue-700 cursor-pointer">Terms of Use</a> and <a class="text-blue-700 cursor-pointer">Privacy Policy.</a></p>
-        <h3 class="text-center">Already have an account? <a class="text-blue-700 font-bold cursor-pointer">Log In </a></h3>
+        <h3 class="text-center">Already have an account? <a href="/login" class="text-blue-700 font-bold cursor-pointer">Log In </a></h3>
     </div>
 </section>
 <%- include('includes/footer.ejs') %>
