add hover to teach and business links

--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -1,6 +1,21 @@
 .nav .logo img{
     width: 91px;
 }
+#udemy-business,#teach-udemy{
+    top: 80px;
+}
+#teach-udemy{
+    right: 20vw;
+}
+#business > a:hover + #udemy-business{
+    display: block !important;
+}
+#teach > a:hover + #teach-udemy{
+    display: block !important;
+}
 .suggsted-courses .course-tabs .active{
     color: #111827;
+}
+#icon-cart:hover{
+ fill: #a435f0;
 }
