--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,8 +8,10 @@
 <!-- navbar -->
 <%- include('includes/navbar.ejs') %>
 
+
 <!-- start welcome section -->
-    <section class="py-10 mb-5 relative">
+    <section class=" welcome py-10 mb-5 relative">
+          
         <img src="https://img-c.udemycdn.com/notices/web_banner/image_udlite/4f9d4123-43ee-4f2a-b5ef-1f2ac22962f3.jpg" alt="" class="absolute top-0 left-0 w-full z-0">
         <div class="container mx-auto">
                 <div class="card bg-white px-4 py-10 mt-7 shadow-md w-1/3 rounded mx-8 h-3/5 self-center z-40 relative">
