--- a/views/home.ejs
+++ b/views/home.ejs
@@ -49,11 +49,58 @@
             <h2 class="text-3xl font-bold mb-3">Expand your career opportunities with Python</h2>
             <p class="w-2/3 mb-4">Whether you work in machine learning or finance, or are pursuing a career in web development or data science, Python is one of the most important skills you can learn. Python's simple syntax is especially suited for desktop, web, and business applications. Python's design philosophy emphasizes readability and usability. Python was developed...</p>
             <button class=" bg-white border border-gray-700 py-2 px-5 hover:bg-gray-50 transition duration-900 ease-in-out text-gray-700 font-bold"><a href="/login">Explore Python</a></button>
+            <div class="courses mt-8 flex">
+                <% for(let i=0; i < 5; i++){ %> 
+                <div class="single-course w-1/5 mr-5">
+                    <img src="https://img-c.udemycdn.com/course/240x135/567828_67d0.jpg" alt="2021 Complete Python Bootcamp From Zero to Hero in Python" class="border">
+                    <h4 class="title font-bold mt-3">2021 Complete Python Bootcamp From Zero to Hero in Python</h4>
+                    <p class="creator text-sm text-gray-600">Jose Portilla</p>
+                    <p class="rate"></p>
+                    <p class="price font-bold">$11.99</p>
+                </div>
+                <% } %> 
+            </div>
         </div>
     </div>
 </section>
 <!-- end suggsted courses -->
 
+<!-- start Learn in-demand -->
+<div class="Learn-in-demand my-7">
+    <div class="container mx-auto flex space-x-40">
+        <div class="w-1/4 font-bold py-5">Learn in-demand skills with over 183,000 video courses</div>
+        <div class="w-1/4 font-bold py-5">Choose courses taught by real-world experts</div>
+        <div class="w-1/4 font-bold py-5">Learn at your own pace, with lifetime access on mobile and desktop</div>
+    </div>
+</div>
+<!-- end Learn in-demand -->
 
+<!-- start Students are viewing -->
+<div class="students-viewing my-10">
+    <div class="container mx-auto">
+        <h2 class="font-bold text-2xl">Students are viewing</h2>
+        <div class="courses mt-3 flex">
+            <% for(let i=0; i < 5; i++){ %> 
+            <div class="single-course w-1/5 mr-5">
+                <img src="https://img-c.udemycdn.com/course/240x135/567828_67d0.jpg" alt="2021 Complete Python Bootcamp From Zero to Hero in Python" class="border">
+                <h4 class="title font-bold mt-3">2021 Complete Python Bootcamp From Zero to Hero in Python</h4>
+                <p class="creator text-sm text-gray-600">Jose Portilla</p>
+                <p class="rate"></p>
+                <p class="price font-bold mb-1">$11.99</p>
+                <span class="bestseller font-bold text-xs p-1 cursor-pointer">Bestseller</span>
+            </div>
+            <% } %> 
+        </div>
+    </div>
+</div>
+<!-- end Students are viewing -->
+
+<!-- start categories -->
+<div class="categories">
+    <div class="container mx-auto">
+
+    </div>
+</div>
+<!-- end categories -->
 <script src="/scripts/home.js"></script>
 <%- include('includes/footer.ejs') %>
